--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap">
     <title>Happy Birthday, Amelia!</title>
 </head>
 <body>
-    <div class="card" id="mainCard">
-        <h1 class="hover-effect">HAPPY BIRTHDAY BABY GIRL</h1>
-        <button onclick="showLoveWords()">Click Here</button>
-    </div>
+    <div class="container">
+        <header>
+            <h1>HAPPY BIRTHDAY MY LOVE</h1>
+        </header>
+        <main>
+            <section class="intro">
+                <p>Dear Baby Girl,</p>
+                <p>On this special day, I want to celebrate the incredible person you are and the joy you bring into my life.</p>
+            </section>
+            
+            <section class="birthday-wishes">
+                <p>Wishing you a day filled with love, laughter, and all the things that make you happiest.</p>
+                <p>Your smile is my favorite thing in the world, and today is all about making sure it never leaves your face.</p>
+            </section>
 
-    <div class="overlay" id="overlay"></div>
-    <div class="modal" id="modal">
-        <p>❤️❤️❤️❤️❤️❤️ You are the most incredible person I've ever met, and today is all about celebrating you. On your special day, I want to express my deepest love and gratitude for having you in my life. Your presence brings joy, warmth, and endless happiness. We've known each other since we were basically kids, and it's been amazing to learn and grow together. This marks another year you're alive to spend with me 😂😂, and I couldn't be happier. ❤️❤️❤️❤️❤️❤️</p>
-        <p>HAPPY BIRTHDAY, MY LOVE! 🎉🎂❤️❤️❤️</p>
-        <p>May your day be filled with laughter and happiness. As you embark on another year, may every moment be a step towards achieving your dreams and creating beautiful memories together. I can't wait to spend forever with you. I LOVE YOU! ❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️</p>
-        <button onclick="closeModal()">Close</button>
+            <section class="gift">
+                <p>To make this day even more special, I've prepared a little something just for you!</p>
+                <!-- Add details or a link to a virtual gift, photo album, etc. -->
+            </section>
+        </main>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
